[package]
authors = ["Jason Housley <HousleyJK@gmail.com>"]
description = "Lightweight, event-driven WebSockets for Rust."
documentation = "https://ws-rs.org/docs"
keywords = [
    "websocket",
    "mio",
    "event-driven",
    "io",
    "web",
]
license = "MIT"
name = "ws"
readme = "README.md"
repository = "https://github.com/housleyjk/ws-rs"
version = "0.9.1"
edition = "2018"

[dependencies]
byteorder = "1.2"
bytes = "0.5"
httparse = "1.2"
log = "0.4"
mio = "0.6"
mio-extras = "2.0"
rand = "0.7"
sha-1 = "0.9"
slab = "0.4"
url = "2.1"

[dependencies.libc]
optional = true
version = "0.2"

[dependencies.libz-sys]
optional = true
version = "1.0"

[dependencies.openssl]
optional = true
version = "0.10"

[dependencies.native-tls]
optional = true
version = "0.2"

[dev-dependencies]
clap = "2.33"
env_logger = "0.7"
term = "0.6"
time = "0.1"

[features]
default = []
permessage-deflate = [
    "libz-sys",
    "libc",
]
ssl = ["openssl"]
nativetls = ["native-tls"]
